Ajout du bilan de l'organisation

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -17,6 +17,7 @@
 \usepackage{amsfonts} % For math sign like Z
 \usepackage{amsmath} % For \genfrac
 \usepackage{amssymb} % pour \lessgtr
+\usepackage{comment} 
 
 \title{TS229}
 \begin{document}
@@ -42,5 +43,23 @@
 % ------------------------------------------------ %
 
 \section{Introduction}
+
+\section{Bilan de l'organisation}
+
+\subsection{Séance 1}
+
+% Sous la forme d'un tableau ? 
+% Tâches entreprises
+% Temps passé 
+
+\subsection{Séance 2}
+
+\subsection{Séance 3}
+
+\subsection{Séance 4}
+
+\subsection{Séance 5} % 13 Décembre 
+
+\section{Annexes}
 
 \end{document}
