--- a/latex/main.tex
+++ b/latex/main.tex
@@ -48,13 +48,45 @@
 
 \subsection{Séance 1}
 
-% Sous la forme d'un tableau ? 
-% Tâches entreprises
-% Temps passé 
+\begin{table}[h]
+	\centering 
+	\begin{tabular}{c|c|c}
+		& Tâches entreprises& Temps passé\\ \hline
+		Elisa& & \\ \hline
+		Alban& & \\ \hline
+		Tierno& & \\ \hline
+		David& & 
+	\end{tabular}
+	\caption{Organisation de la séance 1}
+\end{table}
 
 \subsection{Séance 2}
 
+\begin{table}[h]
+	\centering 
+	\begin{tabular}{c|c|c}
+		& Tâches entreprises& Temps passé\\ \hline
+		Elisa& & \\ \hline
+		Alban& & \\ \hline
+		Tierno& & \\ \hline
+		David& & 
+	\end{tabular}
+	\caption{Organisation de la séance 2}
+\end{table}
+
 \subsection{Séance 3}
+
+\begin{table}[h]
+	\centering 
+	\begin{tabular}{c|c|c}
+		& Tâches entreprises& Temps passé\\ \hline
+		Elisa& & \\ \hline
+		Alban& & \\ \hline
+		Tierno& & \\ \hline
+		David& & 
+	\end{tabular}
+	\caption{Organisation de la séance 3}
+\end{table}
 
 \subsection{Séance 4}
 
