--- a/latex/main.tex
+++ b/latex/main.tex
@@ -30,7 +30,10 @@
 \sujet{TS225 : Projet Images} %Nom du sujet
 \enseignant{Marc \textsc{DONIAS}}
 \eleves{Elisa \textsc{Chien} \\
-		Alban \textsc{Oberti} }
+		Alban \textsc{Oberti} \\
+		Tierno \textsc{Tall} \\
+		David \textsc{Yan} 
+		}
 
 %----------------------------------------------------------------------------------------
 %   TITLE PAGE
