Calcul de la clé de contrôle

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -31,7 +31,7 @@
 \enseignant{Marc \textsc{DONIAS}}
 \eleves{Elisa \textsc{Chien} \\
 		Alban \textsc{Oberti} \\
-		Tierno \textsc{Tall} \\
+		Tierno-Alpha \textsc{Tall} \\
 		David \textsc{Yan} 
 		}
 
@@ -55,7 +55,7 @@
 	\centering 
 	\begin{tabular}{c|c|c}
 		& Tâches entreprises& Temps passé\\ \hline
-		Elisa& & \\ \hline
+		Elisa& Prise de connaissance du sujet et commencement de la méthode d'Otsu& 2h\\ \hline
 		Alban& & \\ \hline
 		Tierno& & \\ \hline
 		David& & 
@@ -69,7 +69,7 @@
 	\centering 
 	\begin{tabular}{c|c|c}
 		& Tâches entreprises& Temps passé\\ \hline
-		Elisa& & \\ \hline
+		Elisa& Finition de la méthode d'Otsu & 2h\\ \hline
 		Alban& & \\ \hline
 		Tierno& & \\ \hline
 		David& & 
