Affichage de schéma et débuggage

--- a/latex/main.tex
+++ b/latex/main.tex
@@ -83,7 +83,7 @@
 	\centering 
 	\begin{tabular}{c|c|c}
 		& Tâches entreprises& Temps passé\\ \hline
-		Elisa& & \\ \hline
+		Elisa& Débuggage et mise en commun de toutes les fonctions de la phase 1 & 3h\\ \hline
 		Alban& & \\ \hline
 		Tierno& & \\ \hline
 		David& & 
@@ -92,6 +92,18 @@
 \end{table}
 
 \subsection{Séance 4}
+
+\begin{table}[h]
+	\centering 
+	\begin{tabular}{c|c|c}
+		& Tâches entreprises& Temps passé\\ \hline
+		Elisa& & \\ \hline
+		Alban& & \\ \hline
+		Tierno& & \\ \hline
+		David& & 
+	\end{tabular}
+	\caption{Organisation de la séance 4}
+\end{table}
 
 \subsection{Séance 5} % 13 Décembre 
 
