--- a/latex/main.tex
+++ b/latex/main.tex
@@ -187,7 +187,7 @@ Le choix se fera en prenant la plus petit norme entre le bloc et les données co
 	\begin{tabular}{c|c|c}
 		& Tâches entreprises& Temps passé\\ \hline
 		Elisa& Finition de la méthode d'Otsu & 2h\\ \hline
-		Alban& & \\ \hline
+		Alban& Complétion de l'échantillonnage et de la binarisation, début du calcul des limites du code-barres et de la recherche de u& 2h\\ \hline
 		Tierno& & \\ \hline
 		David& & 
 	\end{tabular}
@@ -201,7 +201,7 @@ Le choix se fera en prenant la plus petit norme entre le bloc et les données co
 	\begin{tabular}{c|c|c}
 		& Tâches entreprises& Temps passé\\ \hline
 		Elisa& Débuggage et mise en commun de toutes les fonctions de la phase 1 & 3h\\ \hline
-		Alban& & \\ \hline
+		Alban& Débuggage des fonctions de décodage des blocs fait chez soi et mise en commun du travail phase1& 3h\\ \hline
 		Tierno& & \\ \hline
 		David& & 
 	\end{tabular}
@@ -215,7 +215,7 @@ Le choix se fera en prenant la plus petit norme entre le bloc et les données co
 	\begin{tabular}{c|c|c}
 		& Tâches entreprises& Temps passé\\ \hline
 		Elisa& & \\ \hline
-		Alban& & \\ \hline
+		Alban& Dernier débuggage et test sur des exemples pour vérifier& \\ \hline
 		Tierno& & \\ \hline
 		David& & 
 	\end{tabular}
