--- a/latex/main.tex
+++ b/latex/main.tex
@@ -265,7 +265,7 @@ Le code barre est donc valide.
 	\begin{tabular}{c|c|c}
 		& Tâches entreprises& Temps passé\\ \hline
 		Elisa& & \\ \hline
-		Alban& Dernier débuggage et test sur des exemples pour vérifier& \\ \hline
+		Alban& Dernier débuggage et test sur des exemples pour vérifier l'efficacité du code& 3h\\ \hline
 		Tierno& & \\ \hline
 		David& & 
 	\end{tabular}
