--- a/latex/main.tex
+++ b/latex/main.tex
@@ -227,13 +227,6 @@ Le choix se fera en prenant la plus petit norme entre le bloc et les données co
 \subsection{Détermination du dernier chiffre du code barre}
 
 \subsection{Vérification de la clef de contrôle}
-Nous obtenons finalement pour cette image le code \textbf{4902030187590}, ce qui correspond bien au code barre présent sur l'image.
-De manière générale, il faut tout de même vérifier la validité du code barre. Pour cela, nous suivons l'algorithme de vérification de code barre grâce à la clé de contrôle.
-
-En l'occurrence, le complément à 10 du dernier chiffre du code barre vaut 0, tandis que le chiffre des unités de la somme des chiffres de rang impair et trois fois la somme des chiffres de rang pair vaut 0. 
-Le code barre est donc valide.
-
-\section{Mise en commun des deux phases}
 
 \section{Bilan de l'organisation}
 
@@ -294,6 +287,18 @@ Le code barre est donc valide.
 \end{table}
 
 \subsection{Séance 5} % 13 Décembre 
+
+\begin{table}[htbp]
+	\centering 
+	\begin{tabular}{c|c|c}
+		& Tâches entreprises& Temps passé\\ \hline
+		Elisa& Rédaction du rapport & \\ \hline
+		Alban& Rédaction du rapport & \\ \hline
+		Tierno& & \\ \hline
+		David& & 
+	\end{tabular}
+	\caption{Organisation de la séance 5}
+\end{table}
 
 \newpage
 
