--- a/latex/main.tex
+++ b/latex/main.tex
@@ -182,6 +182,10 @@ unités est égal au complément à 10 du $13^{eme}$ chiffre du code.
 
 \section{Résultats}
 
+\subsection{Phase 1 : Détection du code barre}
+
+\subsection{Phase 2 : Lecture du code barre}
+
 \subsubsection*{Seuillage à l'aide d'Otsu}
 Prenons l'image suivante :
 \begin{figure}[H] % Ajouter les deux points reçu en argument 
